Adds dummy implementation of server.
